--- a/src/dungeon-master-copilot/dungeon-master-copilot-server/Shared/MainLayout.razor
+++ b/src/dungeon-master-copilot/dungeon-master-copilot-server/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<PageTitle>dungeon-master-copilot-server</PageTitle>
+<PageTitle>Dungeon Master Copilot</PageTitle>
 
 <div class="page">
     <div class="sidebar">
