--- a/src/dungeon-master-copilot/dungeon-master-copilot-server/Shared/NavMenu.razor
+++ b/src/dungeon-master-copilot/dungeon-master-copilot-server/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">dungeon-master-copilot-server</a>
+        <a class="navbar-brand" href="">Dungone Master Copilot</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
