--- a/src/dungeon-master-copilot/dungeon-master-copilot-server/Pages/Index.razor
+++ b/src/dungeon-master-copilot/dungeon-master-copilot-server/Pages/Index.razor
@@ -2,8 +2,6 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Welcome to Dungeon Master Copilot</h1>
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+This application will help you build content for your Dungeons and Dragons games.
