--- a/src/dungeon-master-copilot/dungeon-master-copilot-server/Shared/NavMenu.razor
+++ b/src/dungeon-master-copilot/dungeon-master-copilot-server/Shared/NavMenu.razor
@@ -14,6 +14,12 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </div>
+        <!--Character builder-->
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="character/builder">
+                <span class="oi oi-person" aria-hidden="true"></span> Character Builder
+            </NavLink>
+        </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="showprofile">
                 <span class="oi oi-person" aria-hidden="true"></span> Show profile
