--- a/src/dungeon-master-copilot/dungeon-master-copilot-server/Pages/CharacterBuilder.razor
+++ b/src/dungeon-master-copilot/dungeon-master-copilot-server/Pages/CharacterBuilder.razor
@@ -3,8 +3,8 @@
 @using dungeon_master_copilot_server.Services
 @using dungeon_master_copilot_server.Data
 
-@inject SemanticKernelService semanticKernelService
-@inject CharacterRepository characterRepository
+@inject ISemanticKernelService semanticKernelService
+@inject ICharacterRepository characterRepository
 
 <h1>Character Builder</h1>
 
