--- a/src/DMCopilot/DMCopilot.Backend/Pages/CharacterBuilder.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Pages/CharacterBuilder.razor
@@ -1,7 +1,7 @@
 @page "/character/builder"
 
-@using DMCopilot.Services
-@using DMCopilot.Data
+@using DMCopilot.Backend.Services
+@using DMCopilot.Backend.Data
 
 @inject ISemanticKernelService semanticKernelService
 @inject ICharacterRepository characterRepository
