--- a/src/DMCopilot/DMCopilot.Backend/Pages/_Host.cshtml
+++ b/src/DMCopilot/DMCopilot.Backend/Pages/_Host.cshtml
@@ -11,7 +11,7 @@
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
-    <link href="dungeon-master-copilot-server.styles.css" rel="stylesheet" />
+    <link href="DMCopilot.Backend.styles.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png"/>
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
