--- a/src/DMCopilot/DMCopilot.Backend/Pages/_Host.cshtml
+++ b/src/DMCopilot/DMCopilot.Backend/Pages/_Host.cshtml
@@ -9,7 +9,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="~/" />
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="DMCopilot.Backend.styles.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png"/>
