--- a/src/DMCopilot/DMCopilot.Backend/Shared/NavMenu.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">Dungone Master Copilot</a>
+        <a class="navbar-brand" href="">Dungeon Master Copilot</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -20,6 +20,7 @@
                 <span class="oi oi-person" aria-hidden="true"></span> Character Builder
             </NavLink>
         </div>
+        <!--Show user profile-->
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="showprofile">
                 <span class="oi oi-person" aria-hidden="true"></span> Show profile
