--- a/src/DMCopilot/DMCopilot.Backend/_Imports.razor
+++ b/src/DMCopilot/DMCopilot.Backend/_Imports.razor
@@ -6,5 +6,6 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
+@using Blazorise
 @using DMCopilot.Backend
 @using DMCopilot.Backend.Shared
