--- a/src/DMCopilot/DMCopilot.Backend/Shared/LoginDisplay.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Shared/LoginDisplay.razor
@@ -3,7 +3,7 @@
 
 <AuthorizeView>
     <Authorized>
-        @context.User.Identity?.Name!
+        @context.User.Identity?.Name
         <a href="MicrosoftIdentity/Account/SignOut">Log out</a>
     </Authorized>
     <NotAuthorized>
