Work on Characters

--- a/src/DMCopilot/DMCopilot.Backend/Shared/NavMenu.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Shared/NavMenu.razor
@@ -20,16 +20,10 @@
                 </BarLink>
             </BarItem>
             <BarItem>
-                <BarDropdown>
-                    <BarDropdownToggle>
-                        <BarIcon IconName="IconName.Edit" />
-                        Character
-                    </BarDropdownToggle>
-                    <BarDropdownMenu Background="Background.Transparent">
-                        <BarDropdownItem To="character/builder">Builder</BarDropdownItem>
-                        <BarDropdownItem>Creator</BarDropdownItem>
-                    </BarDropdownMenu>
-                </BarDropdown>
+                <BarLink To="characters">
+                    <BarIcon IconName="IconName.Edit" />
+                    Characters
+                </BarLink>
             </BarItem>
         </BarStart>
     </BarMenu>
