--- a/src/DMCopilot/DMCopilot.Backend/Pages/ShowProfile.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Pages/ShowProfile.razor
@@ -7,7 +7,7 @@
 
 @inject Microsoft.Graph.GraphServiceClient GraphServiceClient
 @inject MicrosoftIdentityConsentAndConditionalAccessHandler ConsentHandler
-@inject ITenantRepository tenantRepository
+@inject IWorldRepository tenantRepository
 
 <h1>Me</h1>
 
