--- a/src/DMCopilot/DMCopilot.Backend/Shared/LoginDisplay.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Shared/LoginDisplay.razor
@@ -1,5 +1,8 @@
 ﻿@using Blazorise
 @using Blazorise.Bootstrap
+@using DMCopilot.Backend.Services
+
+@inject IAccountService AccountService
 
 <AuthorizeView>
     <Authorized>
