--- a/src/DMCopilot/DMCopilot.Backend/Shared/NavMenu.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Shared/NavMenu.razor
@@ -20,6 +20,18 @@
                 </BarLink>
             </BarItem>
             <BarItem>
+                <BarLink To="worlds">
+                    <BarIcon IconName="IconName.Circle" />
+                    Worlds
+                </BarLink>
+            </BarItem>
+            <BarItem>
+                <BarLink To="campaigns">
+                    <BarIcon IconName="IconName.History" />
+                    Campaigns
+                </BarLink>
+            </BarItem>
+            <BarItem>
                 <BarLink To="characters">
                     <BarIcon IconName="IconName.Edit" />
                     Characters
