--- a/src/DMCopilot/DMCopilot.Backend/Shared/MainLayout.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Shared/MainLayout.razor
@@ -1,19 +1,44 @@
 ﻿@inherits LayoutComponentBase
 
+@using DMCopilot.Backend.Models
+@using DMCopilot.Backend.Services
+
+@inject IAccessService AccessService
+@inject AuthenticationStateProvider AuthenticationStateProvider
+
 <PageTitle>Dungeon Master Copilot</PageTitle>
 
 <div class="page">
     <div class="sidebar">
         <NavMenu />
     </div>
+    <CascadingValue Value="@Account">
+        <CascadingValue Value="@Tenant">
+            <main>
+                <div class="top-row px-4 auth">
+                            <LoginDisplay />
+                </div>
 
-    <main>
-        <div class="top-row px-4 auth">
-            <LoginDisplay />
-        </div>
-
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
+                <article class="content px-4">
+                    @Body
+                </article>
+            </main>
+        </CascadingValue>
+    </CascadingValue>
 </div>
+
+@code {
+    [CascadingParameter]
+    public Account? Account { get; set; }
+    
+    [CascadingParameter]
+    public Tenant? Tenant { get; set; }
+
+    protected override async Task OnInitializedAsync()
+    {
+        var context = await AuthenticationStateProvider.GetAuthenticationStateAsync();
+        Account = await AccessService.InitializeUsingContext(context);
+        Tenant = AccessService.Tenant;
+    }
+}
+
