--- a/src/DMCopilot/DMCopilot.Backend/Shared/NavMenu.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Shared/NavMenu.razor
@@ -20,6 +20,12 @@
                 </BarLink>
             </BarItem>
             <BarItem>
+                <BarLink To="tenants">
+                    <BarIcon IconName="IconName.Building" />
+                    Tenants
+                </BarLink>
+            </BarItem>
+            <BarItem>
                 <BarLink To="worlds">
                     <BarIcon IconName="IconName.Circle" />
                     Worlds
