--- a/src/DMCopilot/DMCopilot.Backend/App.razor
+++ b/src/DMCopilot/DMCopilot.Backend/App.razor
@@ -10,5 +10,8 @@
                 <p role="alert">Sorry, there's nothing at this address.</p>
             </LayoutView>
         </NotFound>
+        <Navigating>
+            <p>Loading the requested page&hellip;</p>
+        </Navigating>
     </Router>
 </CascadingAuthenticationState>
