--- a/src/DMCopilot/DMCopilot.Backend/Pages/Tenants.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Pages/Tenants.razor
@@ -24,7 +24,7 @@
                 <TableRow @key="@tenant.Id">
                     <TableRowHeader>@tenant.Type</TableRowHeader>
                     <TableRowCell>@tenant.Name</TableRowCell>
-                    <TableRowCell>@tenant.OwnerEmail</TableRowCell>
+                    <TableRowCell>@tenant.OwnerAccount</TableRowCell>
                 </TableRow>
             }
         </TableBody>
