--- a/src/DMCopilot/DMCopilot.Backend/Shared/NavMenu.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Shared/NavMenu.razor
@@ -14,20 +14,8 @@
      <BarMenu>
         <BarStart>
             <BarItem>
-                <BarLink To="showprofile">
-                    <BarIcon IconName="IconName.User" />
-                    Profile
-                </BarLink>
-            </BarItem>
-            <BarItem>
-                <BarLink To="tenants">
-                    <BarIcon IconName="IconName.Building" />
-                    Tenants
-                </BarLink>
-            </BarItem>
-            <BarItem>
                 <BarLink To="worlds">
-                    <BarIcon IconName="IconName.Circle" />
+                    <BarIcon IconName="IconName.Map" />
                     Worlds
                 </BarLink>
             </BarItem>
@@ -39,7 +27,7 @@
             </BarItem>
             <BarItem>
                 <BarLink To="characters">
-                    <BarIcon IconName="IconName.Edit" />
+                    <BarIcon IconName="IconName.Users" />
                     Characters
                 </BarLink>
             </BarItem>
