--- a/src/DMCopilot/DMCopilot.Backend/Shared/MainLayout.razor.css
+++ b/src/DMCopilot/DMCopilot.Backend/Shared/MainLayout.razor.css
@@ -17,6 +17,7 @@ main {
     border-bottom: 1px solid #d6d5d5;
     justify-content: flex-end;
     height: 3.55rem;
+    display: flex;
     align-items: center;
 }
 
