Remove TEXT-DAVICI-003

--- a/src/DMCopilot/DMCopilot.Backend/Pages/WorldsEdit.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Pages/WorldsEdit.razor
@@ -9,12 +9,10 @@
 @inject IWorldRepository worldRepository
 @inject NavigationManager navigationManager
 
-<h4>World</h4>
-
 <Card Background="Background.Info" WhiteText>
     <CardBody>
         <CardTitle Size="3">
-            Generate the World
+            Generate a World
         </CardTitle>
         <CardText>
             Enter a few details about the world you would like to generate. You can be as specific as you like, or leave it to chance.
