Split models and services into shared project

--- a/src/DMCopilot/DMCopilot.Backend/Pages/Worlds.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Pages/Worlds.razor
@@ -1,8 +1,8 @@
 @page "/worlds"
 
-@using DMCopilot.Backend.Services
-@using DMCopilot.Backend.Data
-@using DMCopilot.Backend.Models
+@using DMCopilot.Shared.Services
+@using DMCopilot.Shared.Data
+@using DMCopilot.Shared.Models
 
 @inject IWorldRepository worldRepository
 
