--- a/src/DMCopilot/DMCopilot.Backend/Shared/LoginDisplay.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Shared/LoginDisplay.razor
@@ -1,7 +1,7 @@
 ﻿@using Blazorise
 
-@using DMCopilot.Backend.Models
-@using DMCopilot.Backend.Services
+@using DMCopilot.Shared.Models
+@using DMCopilot.Shared.Services
 
 <AuthorizeView>
     <Authorized>
