--- a/src/DMCopilot/DMCopilot.Backend/Shared/MainLayout.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Shared/MainLayout.razor
@@ -1,7 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
-@using DMCopilot.Backend.Models
-@using DMCopilot.Backend.Services
+@using DMCopilot.Shared.Models
+@using DMCopilot.Shared.Services
 
 @inject IAccessService AccessService
 @inject AuthenticationStateProvider AuthenticationStateProvider
