--- a/src/DMCopilot/DMCopilot.Backend/_Imports.razor
+++ b/src/DMCopilot/DMCopilot.Backend/_Imports.razor
@@ -9,5 +9,5 @@
 @using Blazorise
 @using DMCopilot.Backend
 @using DMCopilot.Backend.Shared
-@using DMCopilot.Backend.Services
+@using DMCopilot.Shared.Services
 
