--- a/src/DMCopilot/DMCopilot.Backend/Pages/Characters.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Pages/Characters.razor
@@ -1,8 +1,8 @@
 @page "/characters"
 
-@using DMCopilot.Backend.Services
-@using DMCopilot.Backend.Data
-@using DMCopilot.Backend.Models
+@using DMCopilot.Shared.Services
+@using DMCopilot.Shared.Data
+@using DMCopilot.Shared.Models
 
 @inject ICharacterRepository characterRepository
 
