--- a/src/DMCopilot/DMCopilot.Backend/Pages/CharactersEdit.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Pages/CharactersEdit.razor
@@ -1,8 +1,8 @@
 @page "/characters/{CharacterId?}"
 
-@using DMCopilot.Backend.Services
-@using DMCopilot.Backend.Data
-@using DMCopilot.Backend.Models
+@using DMCopilot.Shared.Services
+@using DMCopilot.Shared.Data
+@using DMCopilot.Shared.Models
 
 @inject ISemanticKernelService semanticKernelService
 @inject ICharacterRepository characterRepository
