--- a/src/DMCopilot/DMCopilot.Backend/Pages/Tenants.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Pages/Tenants.razor
@@ -1,8 +1,8 @@
 @page "/tenants"
 
-@using DMCopilot.Backend.Services
-@using DMCopilot.Backend.Data
-@using DMCopilot.Backend.Models
+@using DMCopilot.Shared.Services
+@using DMCopilot.Shared.Data
+@using DMCopilot.Shared.Models
 
 @inject ITenantRepository tenantRepository
 
