--- a/src/DMCopilot/DMCopilot.Backend/Pages/WorldsEdit.razor
+++ b/src/DMCopilot/DMCopilot.Backend/Pages/WorldsEdit.razor
@@ -1,9 +1,9 @@
 @page "/world/{WorldId?}"
 @page "/world/new"
 
-@using DMCopilot.Backend.Services
-@using DMCopilot.Backend.Data
-@using DMCopilot.Backend.Models
+@using DMCopilot.Shared.Services
+@using DMCopilot.Shared.Data
+@using DMCopilot.Shared.Models
 
 @inject ISemanticKernelService semanticKernelService
 @inject IWorldRepository worldRepository
